--- a/jbot-example/src/main/resources/application.properties
+++ b/jbot-example/src/main/resources/application.properties
@@ -6,10 +6,10 @@ server.port=8080
 
 # slack integrations
 slackApi=https://slack.com/api
-slackBotToken=<paste your slack bot token>
+slackBotToken=xoxb-1443922145664-1432736224945-jpbD73qs5z1dK9e4NFFBi1pd
 slashCommandToken=<paste your slash command token>
 # replace the below url with your slack webhook url
-slackIncomingWebhookUrl=https://slack.com
+slackIncomingWebhookUrl=https://oncors4fortum.slack.com
 
 # fb bot
 fbGraphApi=https://graph.facebook.com/v3.2
